// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledMenu should match snapshot when 'size' prop is '%' 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  border: 1px solid #E9EBED;
  border-radius: 2px;
  padding: 0.75rem 0;
  box-shadow: 0px 5px 21px rgba(195,195,195,0.5);
  overflow-x: hidden;
  overflow-y: auto;
  background-color: #FFFFFF;
  outline: none;
  max-width: 200px;
  max-height: 380px;
}

<ul
  className="c0 deposit"
  id="Card"
  size="sm"
>
  National monitor
</ul>
`;

exports[`StyledMenu should match snapshot when 'size' prop is '%' 2`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  border: 1px solid #E9EBED;
  border-radius: 2px;
  padding: 0.75rem 0;
  box-shadow: 0px 5px 21px rgba(195,195,195,0.5);
  overflow-x: hidden;
  overflow-y: auto;
  background-color: #FFFFFF;
  outline: none;
  min-width: 300px;
  max-width: 460px;
  max-height: 380px;
}

<ul
  className="c0 tangible"
  id="compressing"
  size="lg"
>
  Account action-items
</ul>
`;

exports[`StyledMenu should match the snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  border: 1px solid #E9EBED;
  border-radius: 2px;
  padding: 0.75rem 0;
  box-shadow: 0px 5px 21px rgba(195,195,195,0.5);
  overflow-x: hidden;
  overflow-y: auto;
  background-color: #FFFFFF;
  outline: none;
  min-width: 300px;
  max-width: 460px;
  max-height: 380px;
}

<ul
  className="c0 reboot"
  id="Sleek"
>
  Key mobile evolve
</ul>
`;

exports[`StyledMenu should match the snapshot with 'hideTopMargin' 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  border: 1px solid #E9EBED;
  border-radius: 2px;
  padding: 0.75rem 0;
  box-shadow: 0px 5px 21px rgba(195,195,195,0.5);
  overflow-x: hidden;
  overflow-y: auto;
  background-color: #FFFFFF;
  outline: none;
  margin-top: 0;
  min-width: 300px;
  max-width: 460px;
  max-height: 380px;
}

<ul
  className="c0 Computer"
  id="deposit"
>
  Director
</ul>
`;
